--- a/BibliotekaMobilnaPWR/res/layout/activity_mkonto.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_mkonto.xml
@@ -12,7 +12,7 @@
         android:layout_marginBottom="15dp"
         android:text="@string/title_account"
         android:textSize="22dp"
-        android:textColor="@color/blue"/>
+        android:textColor="@color/black"/>
     
     <LinearLayout 
         android:layout_width="match_parent"
