--- a/BibliotekaMobilnaPWR/res/layout/logowanie.xml
+++ b/BibliotekaMobilnaPWR/res/layout/logowanie.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="15dp"
         android:text="@string/login_title"
         android:textSize="22dp"
-        android:textColor="@color/blue"/>
+        android:textColor="@color/black"/>
     
     <LinearLayout 
         android:layout_width="match_parent"
