--- a/BibliotekaMobilnaPWR/res/layout/main.xml
+++ b/BibliotekaMobilnaPWR/res/layout/main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:text="@string/title_main"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         android:textSize="22dp" />
 
     <LinearLayout
