--- a/BibliotekaMobilnaPWR/res/values/colors.xml
+++ b/BibliotekaMobilnaPWR/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue">#3366ff</color>
-     <color name="blue_transparent">#503366ff</color>
-    <color name="green">#00ff00</color>
-    <color name="green_transparent">#5000ff00</color>
-    <color name="red">#ff0000</color>
-    <color name="red_transparent">#50ff0000</color>
+    <color name="blue">#3399cc</color>
+    <color name="blue_transparent">#003366</color>
+    <color name="green">#339900</color>
+    <color name="green_transparent">#006600</color>
+    <color name="red">#ff3333</color>
+    <color name="red_transparent">#cc0033</color>
+    <color name="black">#000000</color>
 </resources>
