--- a/BibliotekaMobilnaPWR/res/layout/activity_mkonto.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_mkonto.xml
@@ -6,26 +6,46 @@
      android:background="@drawable/background"
     android:gravity="center" >
     
-    <TextView 
+    <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="45px" >
+
+    <ImageView
+        android:id="@+id/helpAccountActivity"
+        android:layout_width="45px"
+        android:layout_height="45px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/help" />
+
+    <TextView
+        android:id="@+id/title_account_activity"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_height="45px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/helpAccountActivity"
+        android:background="#70FFFFFF"
+        android:gravity="center"
         android:text="@string/title_account"
-        android:textSize="22dp"
-        android:textColor="@color/black"/>
-    
+        android:textSize="20sp"
+        android:typeface="monospace" />
+
+</RelativeLayout>
+   
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:orientation="horizontal"
         android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp">
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="25dp">
         <TextView 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/account_name"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:layout_weight="1"/>
         
@@ -33,6 +53,7 @@
             android:id="@+id/account_name_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textSize="16sp"
             android:layout_weight="2"/>
     </LinearLayout>
     
@@ -47,13 +68,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/account_surname"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:layout_weight="1"/>
         
         <TextView 
             android:id="@+id/account_surname_tv"
             android:layout_width="0dp"
+            android:textSize="16sp"
             android:layout_height="wrap_content"
             android:layout_weight="2"/>
     </LinearLayout>
