--- a/BibliotekaMobilnaPWR/res/layout/activity_wypozyczenia.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_wypozyczenia.xml
@@ -4,19 +4,38 @@
     android:layout_height="match_parent"
      android:background="@drawable/background"
     android:orientation="vertical" >
-    <TextView 
+   <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="45px" >
+
+    <ImageView
+        android:id="@+id/helpWypozyczeniaActivity"
+        android:layout_width="45px"
+        android:layout_height="45px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/help" />
+
+    <TextView
+        android:id="@+id/title_wypozyczenia_activity"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        android:text="Wypożyczenia"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_height="45px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/helpWypozyczeniaActivity"
+        android:background="#70FFFFFF"
+        android:gravity="center"
+        android:text="@string/title_wypozyczenia_activity"
+        android:textSize="20sp"
+        android:typeface="monospace" />
+
+</RelativeLayout>
     
     <TableLayout 
         android:id="@+id/history_table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="5dp"
         android:background="#4285f4"
         android:shrinkColumns="*"
         android:stretchColumns="*">        
@@ -32,24 +51,21 @@
           	android:id="@+id/history_table_2"
           	android:layout_width="match_parent"
             android:layout_height="270dp"
-            android:layout_weight="0.65"
-            android:background="#EFFFBC"
-            android:padding="10dp"
+            android:background="#70FFFFFF"
+            android:padding="5dp"
             android:shrinkColumns="*"
             android:stretchColumns="*" >            
         </TableLayout>        
         
     </ScrollView>
     
-    <Button 
-        android:id="@+id/btnBack_hisory"
+   <ImageView
+        android:id="@+id/btnBackWypozyczenia"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:background="#458b74"
-        android:text="@string/btnString"
-        android:visibility="gone"
+        android:background="@drawable/arrow_back"
         />
  </LinearLayout>
