--- a/BibliotekaMobilnaPWR/res/layout/logowanie.xml
+++ b/BibliotekaMobilnaPWR/res/layout/logowanie.xml
@@ -4,23 +4,55 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-     android:background="@drawable/background"
+
+    android:background="@drawable/background"
     tools:context="com.example.bibliotekamobilnapwr.Main" >
     
-    <TextView 
+   <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_gravity="top"
+    android:layout_height="45px" >
+
+    <ImageView
+        android:id="@+id/helpLoginActivity"
+        android:layout_width="45px"
+        android:layout_height="45px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/help" />
+
+   <!--  <TextView
+        android:id="@+id/title_login_activity"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_height="45px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/helpLoginActivity"
+        android:background="#70FFFFFF"
+        android:gravity="center"
         android:text="@string/login_title"
-        android:textSize="22dp"
-        android:textColor="@color/black"/>
+        android:textSize="20sp"
+        android:typeface="monospace" /> -->
+
+</RelativeLayout>
+
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="40dp"
+       android:layout_marginBottom="15dp"
+       android:gravity="center"
+       android:text="@string/login_title"
+       android:textColor="@color/black"
+       android:textSize="22dp" 
+       android:typeface="monospace"/>
     
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:orientation="horizontal"
+         android:gravity="center"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp">
         <TextView 
@@ -99,5 +131,22 @@
 	        android:gravity="center"
 	        android:background="@color/green_transparent"
 	        android:text="@string/main_login"/> -->
+
+     <RelativeLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:gravity="bottom" >
+
+         <ImageView
+             android:id="@+id/back_logowanie"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="left"
+             android:layout_marginBottom="10dp"
+             android:layout_marginLeft="10dp"
+             android:layout_marginTop="10dp"
+             android:background="@drawable/arrow_back" />
+     </RelativeLayout>
+	
 </LinearLayout>
 
