--- a/BibliotekaMobilnaPWR/res/layout/activity_orders.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_orders.xml
@@ -37,23 +37,25 @@
         android:padding="10dp" />
 
     <LinearLayout
+        android:id="@+id/orders_top_view"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/blue"
+        android:background="#4285f4"
         android:orientation="horizontal" >
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:padding="10dp" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:gravity="left"
-                android:text="Tutuł" />
+                android:text="@string/book_Title" />
 
     
         </LinearLayout>
@@ -68,7 +70,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="left"
-                android:text="Autor" />
+                android:text="@string/book_Author"
+                android:padding="10dp" />
 
         
         </LinearLayout>
@@ -78,7 +81,8 @@
             android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:gravity="left"
-            android:text="Status" />
+            android:text="@string/book_stat"
+            android:padding="10dp" />
     </LinearLayout>
 
     <ListView
@@ -87,5 +91,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="1" >
     </ListView>
+    
+     <ImageView
+        android:id="@+id/btnBack_orders"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/arrow_back" />
 
 </LinearLayout>
