--- a/BibliotekaMobilnaPWR/res/layout/logowanie.xml
+++ b/BibliotekaMobilnaPWR/res/layout/logowanie.xml
@@ -1,27 +1,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@drawable/background"
+    android:orientation="vertical"
     tools:context="com.example.bibliotekamobilnapwr.Main" >
-    
-   <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_gravity="top"
-    android:layout_height="45px" >
 
-    <ImageView
-        android:id="@+id/helpLoginActivity"
-        android:layout_width="45px"
-        android:layout_height="45px"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/help" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-   <!--  <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45px"
+                android:layout_gravity="top" >
+
+                <ImageView
+                    android:id="@+id/helpLoginActivity"
+                    android:layout_width="45px"
+                    android:layout_height="45px"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/help" />
+
+                <!--
+         <TextView
         android:id="@+id/title_login_activity"
         android:layout_width="wrap_content"
         android:layout_height="45px"
@@ -32,95 +41,102 @@
         android:gravity="center"
         android:text="@string/login_title"
         android:textSize="20sp"
-        android:typeface="monospace" /> -->
+        android:typeface="monospace" />
+                -->
 
-</RelativeLayout>
-
-   <TextView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="40dp"
-       android:layout_marginBottom="15dp"
-       android:gravity="center"
-       android:text="@string/login_title"
-       android:textColor="@color/black"
-       android:textSize="22dp" 
-       android:typeface="monospace"/>
-    
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:orientation="horizontal"
-         android:gravity="center"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp">
-        <TextView 
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/login_login"
-            android:layout_weight="1"/>
-        
-        <EditText 
-            android:id="@+id/login_login_et"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/login_login"
-            android:layout_weight="5"/>
-    </LinearLayout>
-    
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:orientation="horizontal"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp">
-        <TextView 
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/login_password"
-            android:layout_weight="1"/>
-        
-        <EditText 
-            android:id="@+id/login_password_et"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="@string/login_password"
-            android:layout_weight="5"/>
-    </LinearLayout>
-	  
-     <RelativeLayout
-            android:id="@+id/login_rl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:background="@drawable/button_rounded_green" >
-
-            <ImageView
-                android:id="@+id/login_icon"
-                android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
-                android:layout_alignParentLeft="true"
-                android:background="@drawable/login"
-                android:scaleType="fitXY" />
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/login_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@+id/login_icon"
-                android:text="@string/main_login"
-                android:textSize="23dp" />
-        </RelativeLayout>
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="40dp"
+                android:gravity="center"
+                android:text="@string/login_title"
+                android:textColor="@color/black"
+                android:textSize="22dp"
+                android:typeface="monospace" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:gravity="center"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/login_login" />
+
+                <EditText
+                    android:id="@+id/login_login_et"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:hint="@string/login_login"
+                    android:inputType="text" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/login_password" />
+
+                <EditText
+                    android:id="@+id/login_password_et"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:hint="@string/login_password"
+                    android:inputType="textPassword" />
+            </LinearLayout>
+
+            
+        </LinearLayout>
+    </ScrollView>
     
-<!-- 	    <Button 
+  <RelativeLayout
+                android:id="@+id/login_rl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/button_rounded_green" >
+
+                <ImageView
+                    android:id="@+id/login_icon"
+                    android:layout_width="@dimen/icon_size"
+                    android:layout_height="@dimen/icon_size"
+                    android:layout_alignParentLeft="true"
+                    android:background="@drawable/login"
+                    android:scaleType="fitXY" />
+
+                <TextView
+                    android:id="@+id/login_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@+id/login_icon"
+                    android:text="@string/main_login"
+                    android:textSize="23dp" />
+            </RelativeLayout>
+    <!--
+         	    <Button 
 	        android:id="@+id/login_login_btn"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -130,23 +146,23 @@
 	        android:padding="5dp"
 	        android:gravity="center"
 	        android:background="@color/green_transparent"
-	        android:text="@string/main_login"/> -->
+	        android:text="@string/main_login"/>
+    -->
 
-     <RelativeLayout
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:gravity="bottom" >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom" >
 
-         <ImageView
-             android:id="@+id/back_logowanie"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_gravity="left"
-             android:layout_marginBottom="10dp"
-             android:layout_marginLeft="10dp"
-             android:layout_marginTop="10dp"
-             android:background="@drawable/arrow_back" />
-     </RelativeLayout>
-	
+        <ImageView
+            android:id="@+id/back_logowanie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/arrow_back" />
+    </RelativeLayout>
+
 </LinearLayout>
-
