--- a/BibliotekaMobilnaPWR/res/layout/komunikat.xml
+++ b/BibliotekaMobilnaPWR/res/layout/komunikat.xml
@@ -1,30 +1,47 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-     android:background="@drawable/background"
-    android:layout_height="match_parent" >
-    
-    <TextView 
-        android:id="@+id/comm_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:text="@string/comm_title"
-        android:textSize="22dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/black"/>
-    
-    <ListView 
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:orientation="vertical" >
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="45px"
+        android:layout_gravity="top" >
+
+        <ImageView
+            android:id="@+id/helpAlerty"
+            android:layout_width="45px"
+            android:layout_height="45px"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/help" />
+
+        <TextView
+            android:id="@+id/comm_title"
+            android:layout_width="wrap_content"
+            android:layout_height="45px"
+            android:layout_alignParentLeft="true"
+        	android:layout_alignParentTop="true"
+       		android:layout_toLeftOf="@+id/helpAlerty"
+            android:text="@string/comm_title"
+            android:textColor="@color/black"                    
+        	android:background="#70FFFFFF"
+        	android:gravity="center"              
+        	android:textSize="20sp"
+       	 	android:typeface="monospace"
+             />
+    </RelativeLayout>
+
+    <ListView
         android:id="@+id/comm_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/comm_title"
         android:layout_alignParentBottom="true"
-        ></ListView>
-    
-</RelativeLayout>
+        android:layout_below="@+id/relativeLayout1" >
+    </ListView>
 
+</RelativeLayout>
