--- a/BibliotekaMobilnaPWR/res/layout/main.xml
+++ b/BibliotekaMobilnaPWR/res/layout/main.xml
@@ -3,33 +3,33 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   
+    android:background="@drawable/background"
     android:orientation="vertical"
-     android:background="@drawable/background"
     tools:context="com.example.bibliotekamobilnapwr.Main" >
-  
-     <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="45px" >
 
-    <ImageView
-        android:id="@+id/helpMainActivity"
-        android:layout_width="45px"
-        android:layout_height="45px"
-        android:layout_toLeftOf="@+id/exitMainActivity"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/help" />
-    
-    <ImageView
-        android:id="@+id/exitMainActivity"
-        android:layout_width="45px"
-        android:layout_height="45px"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/exit" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="45px" >
 
-<!--     <TextView
+        <ImageView
+            android:id="@+id/helpMainActivity"
+            android:layout_width="45px"
+            android:layout_height="45px"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/exitMainActivity"
+            android:background="@drawable/help" />
+
+        <ImageView
+            android:id="@+id/exitMainActivity"
+            android:layout_width="45px"
+            android:layout_height="45px"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/exit" />
+
+        <!--
+         <TextView
         android:id="@+id/title_main_activity"
         android:layout_width="wrap_content"
         android:layout_height="45px"
@@ -40,36 +40,37 @@
         android:gravity="center"
         android:text="@string/title_main"
         android:textSize="20sp"
-        android:typeface="monospace" /> -->
+        android:typeface="monospace" />
+        -->
 
-</RelativeLayout>
-    
-     <TextView
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="15dp"
-         android:layout_marginBottom="5dp"
-         android:gravity="center"
-         android:text="@string/title_main"
-         android:textColor="@color/black"
-         android:textSize="22dp"
-         android:typeface="monospace" />
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="@string/title_main"
+        android:textColor="@color/black"
+        android:textSize="22dp"
+        android:typeface="monospace" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal" >
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="17sp"
-            android:text="@string/main_title" />
+            android:text="@string/main_title"
+            android:textSize="17sp" />
 
         <EditText
             android:id="@+id/main_title_et"
@@ -92,8 +93,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-             android:textSize="17sp"
-            android:text="@string/main_author" />
+            android:text="@string/main_author"
+            android:textSize="17sp" />
 
         <EditText
             android:id="@+id/main_author_et"
@@ -142,8 +143,9 @@
                 android:text="@string/main_search"
                 android:textSize="23dp" />
         </RelativeLayout>
-        
-        <!-- <Button
+
+        <!--
+             <Button
             android:id="@+id/main_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -153,8 +155,9 @@
             android:background="@drawable/button_rounded_green"
             android:gravity="center"
             android:padding="5dp"
-            android:text="@string/main_search" /> -->
-        
+            android:text="@string/main_search" />
+        -->
+
         <RelativeLayout
             android:id="@+id/main_books"
             android:layout_width="match_parent"
